--- v0.08 (WIP)

* Rewrite the IM_ALLOC/IM_FREE macros to call the C versions of the respective functions, and rename them to
  CIM_ALLOC and CIM_FREE to avoid conflicting with the original defines in #imgui.h (#69)
* Remove IM_NEW/IM_PLACEMENT_NEW defines as they don't make sense outside of C++
* Fixed IMGUI_CHECKVERSION to use the correct function, and renamed to CIMGUI_CHECKVERSION (#69)

--- v0.07

* Fixed a bug where unbounded arrays would get emitted to the metadata as having bounds of "[None]" instead of "[]". (#41)
* Fixed structs not having associated line numbers in the JSON output (#39)
* Added --imgui-include-dir option to allow the path to ImGui include files to be specified
* Made imconfig.h get parsed by default to check for extra options, and added --config-include to allow custom config
  files (of the type you would use the IMGUI_USER_CONFIG define to supply) to be included as well. This option reads
  and uses such files but does not emit their contents to the .h file (on the assumption that they are getting included
  there by regular means). It does however emit that information to the JSON output.
* Standardised the rule that "metadata elements are omitted if not known" and removed cases where they were omitted
  when not their default values. (#42)
* Made the JSON generator include #defines with no actual value (#43)
* Fixed a bug where DOM elements inside preprocessor conditionals didn't get enumerated under some circumstances
* Added --generateunformattedfunctions to generate versions of string format functions that don't try and do any
  formatting (many thanks to [@ZimM-LostPolygon] for the implementation!)
* Fixed silly bug that caused is_flags_enum to always be set (#53)
* Fixed parsing of preprocessor conditionals containing continuations (#50)
* Added --imconfig-path to override path to imconfig.h
* Made backends use CIMGUI_IMPL_API consistently
* Worked around Win32 backend wndproc handler not getting generated (#51)