@@ -27,7 +27,8 @@ class DOMType(code_dom.element.DOMElement):
         have_valid_type = False
         while True:
             tok = stream.get_token_of_type(['THING', 'ASTERISK', 'AMPERSAND', 'CONST', 'CONSTEXPR', 'SIGNED',
-                                            'UNSIGNED', 'LSQUARE', 'LTRIANGLE', 'COLON'])
+                                            'UNSIGNED', 'LSQUARE', 'LTRIANGLE', 'COLON', 'STRUCT', 'CLASS', 'UNION',
+                                            'ENUM'])
             if tok is None:
                 if not have_valid_type:
                     stream.rewind(checkpoint)
@@ -81,7 +82,8 @@ class DOMType(code_dom.element.DOMElement):
                     return dom_element
             else:
                 if (tok.type == 'CONST') or (tok.type == 'CONSTEXPR') or (tok.type == 'SIGNED') or \
-                        (tok.type == 'UNSIGNED'):
+                        (tok.type == 'UNSIGNED') or (tok.type == 'CLASS') or (tok.type == 'STRUCT') or \
+                        (tok.type == 'UNION') or (tok.type == 'ENUM'):
                     # Type prefix
                     dom_element.tokens.append(tok)
                 elif tok.type == 'COLON':
